<resources>
    <string name="app_name">Salesman</string>
    <string name="build_graph">Построить граф</string>
    <string name="info">Информация</string>
    <string name="exit">Выход</string>
    <string name="build_graph_header">Построение графа</string>
    <string name="learning_strategy">Стратегия обучения</string>
    <string name="breed_strategy">Стратегия скрещивания</string>
    <string name="population_size">Численность популяции</string>
    <string name="initial_gen_size">Изначальный размер гена</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="mutations_count">Количество мутаций</string>
    <string name="mutation_chance">Вероятность мутации</string>
    <string name="launch_learning">Запустить обучение</string>
    <string name="visit_all_points">Посещение всех точек</string>
    <string name="return_to_origin_point">Возврат в исходную точку</string>
    <string name="path_length">Длина маршрута (см)</string>
    <string name="complete">Завершить</string>
    <string name="max_iterations_count">Максимальное количество итераций</string>
    <string name="learning_result">Результат обучения</string>
    <string name="path_points_count">Точек в маршруте</string>
    <string name="iterations">Количество итераций</string>
    <string name="hint">Подсказка</string>
    <string name="menu_hint">Приложение выполнено в рамках курсовой работы по ООП студентом 421–2 группы Цой В.А.\nЗадача Коммивояжера заключается в поиске оптимального маршрута, выходящего и заканчивающегося в одной заданной точке. Маршрут должен включать каждую из точек графа.\nРешение задачи методом генетического алгоритма происходит следующим образом:\n    1) Генерируется случайным образом начальная популяция маршрутов\n    2) Происходит отбор лучших индивидов\n    3) Скрещивание двух представителей из популяции\n    4) Возврат к шагу 2\n Алгоритм завершается на заданной итерации или по истечении отведённого времени.</string>
    <string name="build_graph_hint">Коснитесь кнопки \"Добавить\", затем коснитесь места на экране, чтобы добавить точку на выбранную позицию (удерживайте, чтобы перемещать по экрану, затем отпустите, чтобы зафиксировать на указанной позиции). Коснитесь точки, чтобы выбрать. Перетягивайте, чтобы соединить точки или перемещаться по графу. Если точка выбрана, перетягивайте для перемещения точки. По окончании выберите стартовую точку и нажмите \"Применить\".</string>
    <string name="learning_hint">Стратегии скрещивания:\n\tДвое лучших - будут отобраны два лучших индивида из популяции\n\tДвое из популяции - будут взяты случайные два индивида из популяции\n\tЛучший с любым - из популяции будут взяты случайный и лучший представители.\nУказанный размер гена отражает число точек в случайно сгенерированных изначальных маршрутах.\nУказанное число мутаций подразумевает число точек, что могут быть изменены мутацией (могут быть добавлены новые, удалены старые или все сразу).\nВероятность мутации - процент маршрутов, рожденных скрещиванием, что попадут под влияние случайной мутации.\nОбучение генетической модели завершится на указанной итерации или по нажатию кнопки \"Завершить\".</string>
    <string name="result_hint">Перетягивайте, чтобы перемещаться по графу.\nНажмите \"Старт\", чтобы запустить визуализацию. Анимация может быть прервана повторным нажатием.\nУказанная длина маршрута измеряется в сантиметрах.\nКоличество точек включает начальную и последнюю.\nУказана итерация, на которой завершилось обучение генетической модели.</string>
    <string name="better_ones">Только двое лучших</string>
    <string name="better_with_any">Лучший с любым из популяции</string>
    <string name="any_pair">Любые двое из популяции</string>
</resources>