<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/build_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_graph"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:text="@string/info"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>

</LinearLayout>